--- a/resmed-support-agent.ipynb
+++ b/resmed-support-agent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8b90402f-4e9d-452d-b83c-05bdf09ab0de",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1b2b074b-e8b4-43c6-865f-c1fd7449f7a7",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "baeea475-d650-452b-99af-35aaba4d3245",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "097d6269-01f4-470b-85cc-f0003cce254b",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "83c89e32-5585-4333-a6c8-6c5c93bc8e4d",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6a398794-dc54-4f33-ac0d-5b0810a47326",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fe6d3002-e7e0-4027-ab8d-3bbc1b3ae8ac",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "35b86974-c7bc-45b1-b5f0-697fc560e831",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5ea4dea4-ac8f-4119-a45a-ac997518e11b",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3278887a-9498-4c96-8c68-fd1a2aad8d1e",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3601657c-90cf-45b9-ac70-b26ec302c1bd",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b45ee0e1-431d-4a42-b8f9-47729b430ec0",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "564bc37c-f3eb-49bd-afec-10ef614ebda0",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7c7b1247-7de3-4508-ad62-b51815e88e4c",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "1fe68cdf-631b-4552-bfc6-0bdfcac4c051",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "3fce36d0-b62a-4903-abe7-4a7f6df5b4fe",
    "metadata": {},
    "outputs": [],
@@ -409,12 +409,12 @@
    "id": "6a3ddaa0-1eff-4b1b-a81c-3523c7bf18f7",
    "metadata": {},
    "source": [
-    "### Bring It Together and Test"
+    "## Bring It Together and Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a7a7f46e-cbbe-4883-b4fb-8c8e1614c8ca",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "5b604983-aa68-4058-a1d2-8e9421a170ea",
    "metadata": {},
    "outputs": [
@@ -437,8 +437,8 @@
       "I hear a clicking sound in my AirSense 10, what should I do?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  find_troubleshooting_manual (call_xJsZ5kH9z0z2EdxSkyYWZf4O)\n",
-      " Call ID: call_xJsZ5kH9z0z2EdxSkyYWZf4O\n",
+      "  find_troubleshooting_manual (call_M91WzEfn5yIBuO2VZdIVlH3Y)\n",
+      " Call ID: call_M91WzEfn5yIBuO2VZdIVlH3Y\n",
       "  Args:\n",
       "    device_model: AirSense 10\n",
       "    issue_keywords: clicking sound\n",
@@ -448,15 +448,15 @@
       "Manual Page 52: Clicking sounds can be a symptom of filter blockage or water in the tubing. Please check and dry the tubing.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "A clicking sound in your AirSense 10 can be caused by a few issues, such as a blocked filter or water in the tubing. Here are some steps you can take to troubleshoot the problem:\n",
+      "A clicking sound in your AirSense 10 can be caused by a few issues, such as a blocked filter or water in the tubing. Here are some steps you can take to troubleshoot:\n",
       "\n",
       "1. **Check the Filter:** Ensure that the air filter is clean and not blocked. If it's dirty, replace it with a new one.\n",
       "\n",
-      "2. **Inspect the Tubing:** Look for any water in the tubing. If you find any, disconnect the tubing and allow it to dry completely before reattaching it.\n",
+      "2. **Inspect the Tubing:** Look for any water in the tubing. If you find any, disconnect the tubing and allow it to dry completely before reconnecting it.\n",
       "\n",
-      "3. **Reassemble:** After checking the filter and tubing, reassemble your device and see if the clicking sound persists.\n",
+      "3. **Reassemble the Device:** After checking the filter and tubing, reassemble your device and see if the clicking sound persists.\n",
       "\n",
-      "If the issue continues after these checks, please let me know, and we can explore further troubleshooting options.\n"
+      "If the sound continues after these checks, please consider reaching out to your healthcare provider or a qualified technician for further assistance.\n"
      ]
     }
    ],
@@ -466,22 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "0310d855-2f19-4a08-b156-b921e62f4bc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "A clicking sound in your AirSense 10 can be caused by a few issues, such as a blocked filter or water in the tubing. Here are some steps you can take to troubleshoot the problem:\n",
+       "A clicking sound in your AirSense 10 can be caused by a few issues, such as a blocked filter or water in the tubing. Here are some steps you can take to troubleshoot:\n",
        "\n",
        "1. **Check the Filter:** Ensure that the air filter is clean and not blocked. If it's dirty, replace it with a new one.\n",
        "\n",
-       "2. **Inspect the Tubing:** Look for any water in the tubing. If you find any, disconnect the tubing and allow it to dry completely before reattaching it.\n",
+       "2. **Inspect the Tubing:** Look for any water in the tubing. If you find any, disconnect the tubing and allow it to dry completely before reconnecting it.\n",
        "\n",
-       "3. **Reassemble:** After checking the filter and tubing, reassemble your device and see if the clicking sound persists.\n",
+       "3. **Reassemble the Device:** After checking the filter and tubing, reassemble your device and see if the clicking sound persists.\n",
        "\n",
-       "If the issue continues after these checks, please let me know, and we can explore further troubleshooting options."
+       "If the sound continues after these checks, please consider reaching out to your healthcare provider or a qualified technician for further assistance."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -494,6 +494,14 @@
    "source": [
     "display(Markdown(response['response']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9fa31a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
